Snapdesigner logo removed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" ng-click="handlePageChange('Home')"><img src="img/SkswholeLogo.png" />{{skDetails.title}}</a>
+                  <a class="navbar-brand" ng-click="handlePageChange('Home')"><img src="img/snapLogo.png" />{{skDetails.title}}</a>
                 </div>
                 <div ng-class="mobileNavClass ? 'navbar-collapse collapse in' : 'navbar-collapse collapse'">
                   <ul class="nav navbar-nav navbar-right">
